@@ -1,7 +1,7 @@
 #!/bin/sh
 # Execute a Java program.
 
-# Copyright (C) 2001 Free Software Foundation, Inc.
+# Copyright (C) 2001, 2006 Free Software Foundation, Inc.
 # Written by Bruno Haible <haible@clisp.cons.org>, 2001.
 #
 # This program is free software; you can redistribute it and/or modify
@@ -27,9 +27,9 @@
 #
 # The extra CLASSPATH must have been set prior to calling this script.
 
-CONF_JAVA='@JAVA@'
+CONF_JAVA='@CONF_JAVA@'
 CONF_CLASSPATH='@CLASSPATH@'
-if test -n "$CONF_JAVA"; then
+if test -n "@HAVE_JAVA_ENVVAR@"; then
   # Combine given CLASSPATH and configured CLASSPATH.
   if test -n "$CLASSPATH"; then
     CLASSPATH="$CLASSPATH${CONF_CLASSPATH:+@CLASSPATH_SEPARATOR@$CONF_CLASSPATH}"
@@ -43,20 +43,24 @@ else
   unset JAVA_HOME
   export CLASSPATH
   if test -n "@HAVE_GIJ@"; then
-    test -z "$JAVA_VERBOSE" || echo gij "$@"
-    exec gij "$@"
+    # In this case, $CONF_JAVA is "gij".
+    test -z "$JAVA_VERBOSE" || echo "$CONF_JAVA $@"
+    exec $CONF_JAVA "$@"
   else
     if test -n "@HAVE_JAVA@"; then
-      test -z "$JAVA_VERBOSE" || echo java "$@"
-      exec java "$@"
+      # In this case, $CONF_JAVA is "java".
+      test -z "$JAVA_VERBOSE" || echo "$CONF_JAVA $@"
+      exec $CONF_JAVA "$@"
     else
       if test -n "@HAVE_JRE@"; then
-        test -z "$JAVA_VERBOSE" || echo jre "$@"
-        exec jre "$@"
+        # In this case, $CONF_JAVA is "jre".
+        test -z "$JAVA_VERBOSE" || echo "$CONF_JAVA $@"
+        exec $CONF_JAVA "$@"
       else
         if test -n "@HAVE_JVIEW@"; then
-          test -z "$JAVA_VERBOSE" || echo jview "$@"
-          exec jview "$@"
+          # In this case, $CONF_JAVA is "jview".
+          test -z "$JAVA_VERBOSE" || echo "$CONF_JAVA $@"
+          exec $CONF_JAVA "$@"
         else
           echo 'Java virtual machine not found, try installing gij or set $JAVA, then reconfigure' 1>&2
           exit 1
