@@ -1,3 +1,7 @@
+2006-03-12  Bruno Haible  <bruno@clisp.org>
+
+	* javaexec.sh.in: Update for changed javaexec.m4.
+
 2006-03-11  Bruno Haible  <bruno@clisp.org>
 
 	Avoid gcc-4.x warnings.
